@@ -495,6 +495,9 @@
 #gptofoo pcl-4l printer/Okidata-Super_6e
 #gptofoo pcl-2 printer/Olivetti-JP350S
 #gptofoo pcl-2 printer/Olivetti-PG_306
+#gptofoo olympus-p300 printer/Olympus-P-300E
+#gptofoo olympus-p300 printer/Olympus-P-300U
+#gptofoo olympus-p300 printer/Olympus-P-330NE
 #gptofoo pcl-2 printer/PCPI-1030
 #gptofoo pcl-2 printer/Panasonic-KX-P4410
 #gptofoo pcl-3 printer/Panasonic-KX-P4450
