@@ -759,6 +759,7 @@ Lexmark Z42
 Lexmark Z43
 Lexmark Z52
 Lexmark Z53
+Olympus P-300 series
 
 The following is the complete list of printers believed to be
 compatible with Gimp-print, along with recommended drivers.  Some of
@@ -1265,6 +1266,9 @@ Okidata Okipage 14ex           pcl-4           HP LaserJet 4 series
 Okidata Super 6e               pcl-4l          HP LaserJet 4L
 Olivetti JP350S                pcl-2           HP LaserJet II series
 Olivetti PG 306                pcl-2           HP LaserJet II series
+Olympus P-300E                 olympus-p300    Olympus P-300 series
+Olympus P-300U                 olympus-p300    Olympus P-300 series
+Olympus P-330NE                olympus-p300    Olympus P-300 series
 PCPI 1030                      pcl-2           HP LaserJet II series
 Panasonic KX-P4410             pcl-2           HP LaserJet II series
 Panasonic KX-P4450             pcl-3           HP LaserJet III series
